--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,6 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
-    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.0",
     "helmet": "^8.1.0",
@@ -39,7 +38,7 @@
     "razorpay": "^2.9.6",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0",
-    "xss-clean": "^0.1.4",
+    "xss": "^1.0.15",
     "zod": "^4.1.12"
   },
   "devDependencies": {
