added admin dashboard in frontend and make perfect flow for that in backend

--- a/backend/env.example
+++ b/backend/env.example
@@ -24,3 +24,9 @@ EMAIL_FROM=no-reply@quickcart.com
 CLIENT_URL=http://localhost:5173
 COOKIE_SECRET=your_cookie_secret_value
 
+# Optional: bootstrap an admin user at startup / during seed
+ADMIN_NAME=QuickCart Admin
+ADMIN_EMAIL=admin@quickcart.com
+ADMIN_PASSWORD=QuickCart@123!
+ADMIN_PHONE=9999999999
+
