--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,4 @@
 VITE_API_BASE_URL=http://localhost:5000/api/v1
 VITE_RAZORPAY_KEY_ID=your_razorpay_key_id      # optional if you expose it client-side
 VITE_APP_NAME=QuickCart        
-
-vBsvdS6bJu1jVAmD
-kanjisonagara2001_db_user                # optional extras if you need them
+           # optional extras if you need them
