--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,3 @@
 VITE_API_BASE_URL=http://localhost:5000/api/v1
 VITE_RAZORPAY_KEY_ID=your_razorpay_key_id      # optional if you expose it client-side
-VITE_APP_NAME=QuickCart        
-           # optional extras if you need them
+VITE_APP_NAME=QuickCart     # optional extras if you need them
